--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_riverpod: ^2.5.1
   dio: ^5.4.3+1
   flutter_dotenv: ^5.1.0
+  card_swiper: ^3.0.1
+  animate_do: ^3.3.4
 
 dev_dependencies:
   flutter_test:
