--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   card_swiper: ^3.0.1
   animate_do: ^3.3.4
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
