--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.3
   flutter_staggered_grid_view: ^0.7.0
+  youtube_player_flutter: ^9.0.1
 
 dev_dependencies:
   flutter_test:
